# LTEngine

./: AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose.yml
.github/workflows/: build.yml  docker.yml
ltengine/: Cargo.toml  benchmark_dataset.json
ltengine/resources/: index.html
ltengine/resources/static/: app.js
ltengine/resources/static/css/: main.css
ltengine/src/: benchmark.rs  cleanup.rs  languages.rs  main.rs  prompt.rs  static_handler.rs  tests.rs
ltengine/src/backend/: mod.rs  openai.rs
ltengine/src/detection/: mod.rs
