[package]
name = "ltengine"
version = "0.1.1"
edition = "2024"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
once_cell = "1.21.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
actix-web-static-files = "4.1"
static-files = "0.2.5"
anyhow = "1.0.102"
actix-multipart = "0.7.2"
whatlang = "0.16.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
tokio = { version = "1", features = ["time", "signal", "sync", "macros"] }
subtle = "2.6.1"
bleuscore = { version = "0.2.0", optional = true }

[features]
default = ["benchmark"]
benchmark = ["dep:bleuscore"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
static-files = "0.2.5"
